Coorection de tous les burgs

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <meta property="twitter:image" content="https://assets.srcbook.com/og.png" type="image/png" />
     <link rel="shortcut icon" href="https://assets.srcbook.com/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" sizes="180x180" href="https://assets.srcbook.com/apple-touch-icon.png" type="image/png" />
+    <meta name="theme-color" content="#11ba82" />
+    <meta name="description" content="FlexDay - Your daily planning app" />
     <title>FlexDay</title>
   </head>
   <body>
