Ajout de la favicon

--- a/index.html
+++ b/index.html
@@ -7,18 +7,19 @@
     <meta property="og:description" content="" />
     <meta property="og:image" content="https://assets.srcbook.com/og.png" type="image/png" />
     <meta property="og:url" content="https://cmaszbsoqmrj6.srcbook.app" />
-    <meta property="og:type" content="website" />
-    <meta property="og:author" content="Srcbook" />
+    <meta property="og:type" content="Tasks app" />
+    <meta property="og:author" content="Prince Kouamé" />
     <meta property="og:site_name" content="FlexDay" />
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:site" content="@srcbookcom" />
+    <meta property="twitter:site" content="@princekouame225" />
     <meta property="twitter:title" content="FlexDay" />
     <meta property="twitter:description" content="" />
-    <meta property="twitter:image" content="https://assets.srcbook.com/og.png" type="image/png" />
-    <link rel="shortcut icon" href="https://assets.srcbook.com/favicon.ico" type="image/x-icon" />
-    <link rel="apple-touch-icon" sizes="180x180" href="https://assets.srcbook.com/apple-touch-icon.png" type="image/png" />
+    <meta property="twitter:image" content="./icon.png" type="image/png" />
+    <link rel="shortcut icon" href="./icon.png" type="image/png" />
+    <link rel="icon" href="./favicon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" sizes="180x180" href="./icon.png">
     <meta name="theme-color" content="#11ba82" />
-    <meta name="description" content="FlexDay - Your daily planning app" />
+    <meta name="description" content="Organisez votre journée avec style" />
     <title>FlexDay</title>
   </head>
   <body>
