suppression l'import inutile de React dans le fichier Footer.tsx.

--- a/index.html
+++ b/index.html
@@ -4,16 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:title" content="FlexDay" />
-    <meta property="og:description" content="" />
-    <meta property="og:image" content="https://assets.srcbook.com/og.png" type="image/png" />
-    <meta property="og:url" content="https://cmaszbsoqmrj6.srcbook.app" />
+    <meta property="og:description" content="Organisez votre journée avec style" />
     <meta property="og:type" content="Tasks app" />
     <meta property="og:author" content="Prince Kouamé" />
     <meta property="og:site_name" content="FlexDay" />
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:site" content="@princekouame225" />
     <meta property="twitter:title" content="FlexDay" />
-    <meta property="twitter:description" content="" />
+    <meta property="twitter:description" content="Organisez votre journée avec style" />
     <meta property="twitter:image" content="./icon.png" type="image/png" />
     <link rel="shortcut icon" href="./icon.png" type="image/png" />
     <link rel="icon" href="./favicon.svg" type="image/svg+xml">
